<resources>
    <string name="server_is_ok">Server is online</string>
    <string name="server_is_fucked">Server is down</string>
    <string name="server_slow">Connection timeout</string>
    <string name="no_internet">No Internet</string>
    <string name="unknown_error">Unknown error</string>
    <string name="server_stats">Server stats</string>
    <string name="cpu_usage">CPU usage :</string>
    <string name="ram_usage">RAM usage :</string>
    <string name="disk_usage">Disk usage :</string>
    <string name="uptime_hours">Uptime (h) :</string>
    <string name="vpn_status">VPN status :</string>
    <string name="vpn_is_running">running</string>
    <string name="vpn_is_down">down</string>
    <string name="servers_list">Servers list</string>
    <string name="settings">Settings</string>
    <string name="about_app">About app</string>
    <string name="refresh_server_metrics">Refresh metrics</string>
    <string name="empty_servers_list">You have not added any servers</string>
</resources>