<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    tools:context=".presentation.StartFragment">

    <ImageButton
        android:id="@+id/ibMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        android:src="@drawable/three_dots_vertical" />

    <ProgressBar
        android:id="@+id/pbMain"
        style="?android:attr/progressBarStyleLarge"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llServerStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ibMenu"
        app:layout_constraintBottom_toTopOf="@id/clServerMetrics"
        android:layout_marginHorizontal="@dimen/padding_32" >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivServerStatus"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/server_is_ok"
            app:shapeAppearanceOverlay="@style/RoundedImage" />

        <TextView
            android:id="@+id/tvServerAvailability"
            style="@style/StatsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_8"
            android:textSize="@dimen/text_size_30"
            tools:text="@string/server_is_ok" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clServerMetrics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llServerStatus"
        app:layout_constraintBottom_toBottomOf="parent" >

        <TextView
            android:id="@+id/tvServerStats"
            style="@style/StatsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/server_stats"
            android:gravity="center"
            android:textSize="@dimen/text_size_24" />

        <ImageView
            android:id="@+id/ivLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvServerStats"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/black_line" />

        <TextView
            android:id="@+id/tvCpuUsage"
            style="@style/StatsText"
            app:layout_constraintVertical_chainStyle="spread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLine"
            app:layout_constraintBottom_toTopOf="@id/tvRamUsage"
            android:layout_marginTop="@dimen/padding_32"
            android:layout_marginStart="@dimen/padding_16"
            android:text="@string/cpu_usage" />

        <TextView
            android:id="@+id/tvCpuUsageValue"
            style="@style/StatsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvCpuUsage"
            app:layout_constraintTop_toTopOf="@id/tvCpuUsage"
            app:layout_constraintBottom_toBottomOf="@id/tvCpuUsage"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/padding_16"
            android:textStyle="bold"
            tools:text="100 %" />

        <TextView
            android:id="@+id/tvRamUsage"
            style="@style/StatsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvCpuUsage"
            app:layout_constraintTop_toBottomOf="@id/tvCpuUsage"
            app:layout_constraintBottom_toTopOf="@id/tvDiskUsage"
            android:text="@string/ram_usage" />

        <TextView
            android:id="@+id/tvRamUsageValue"
            style="@style/StatsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvCpuUsageValue"
            app:layout_constraintEnd_toEndOf="@id/tvCpuUsageValue"
            app:layout_constraintTop_toTopOf="@id/tvRamUsage"
            app:layout_constraintBottom_toBottomOf="@id/tvRamUsage"
            android:textStyle="bold"
            tools:text="100 %" />

        <TextView
            android:id="@+id/tvDiskUsage"
            style="@style/StatsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvRamUsage"
            app:layout_constraintTop_toBottomOf="@id/tvRamUsage"
            app:layout_constraintBottom_toTopOf="@id/tvUptimeHours"
            android:text="@string/disk_usage" />

        <TextView
            android:id="@+id/tvDiskUsageValue"
            style="@style/StatsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvRamUsageValue"
            app:layout_constraintEnd_toEndOf="@id/tvRamUsageValue"
            app:layout_constraintTop_toTopOf="@id/tvDiskUsage"
            app:layout_constraintBottom_toBottomOf="@id/tvDiskUsage"
            android:textStyle="bold"
            tools:text="100 %" />

        <TextView
            android:id="@+id/tvUptimeHours"
            style="@style/StatsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvDiskUsage"
            app:layout_constraintTop_toBottomOf="@id/tvDiskUsage"
            app:layout_constraintBottom_toTopOf="@id/tvVpnStatus"
            android:layout_marginBottom="@dimen/padding_32"
            android:text="@string/uptime_hours" />

        <TextView
            android:id="@+id/tvUptimeHoursValue"
            style="@style/StatsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvDiskUsageValue"
            app:layout_constraintEnd_toEndOf="@id/tvDiskUsageValue"
            app:layout_constraintTop_toTopOf="@id/tvUptimeHours"
            app:layout_constraintBottom_toBottomOf="@id/tvUptimeHours"
            android:textStyle="bold"
            tools:text="99999"/>

        <TextView
            android:id="@+id/tvVpnStatus"
            style="@style/StatsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_16"
            android:background="@drawable/vpn_text_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="@dimen/padding_8"
            android:text="@string/vpn_is_ok" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>